# Screwed-score

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  SETUP.md  fix-netlify-handler.js  middleware.ts  netlify.toml  next.config.ts  package-lock.json  package.json  proxy.ts  seed-completions.js  seed-marketplace.js  tailwind.config.ts  tsconfig.json
app/: globals.css  layout.tsx  page.tsx  sitemap.ts
bot/: .env.example  index.ts  package.json  tsconfig.json  youtube_moderation.py
clippilot/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js
clippilot/src-tauri/: Cargo.toml  tauri.conf.json
clippilot/src-tauri/capabilities/: default.json
clippilot/src-tauri/icons/: placeholder.md
clippilot/src-tauri/src/: lib.rs  main.rs
clippilot/src-tauri/src/commands/: clips.rs  mod.rs  publish.rs  settings.rs  stream.rs
clippilot/src-tauri/src/db/: sqlite.rs
clippilot/src-tauri/src/services/: captioner.rs  detector.rs  mod.rs  processor.rs  publisher.rs  stream_monitor.rs
components/: ApplicationForm.tsx  BenchmarkCard.tsx  ContentGenerator.tsx  DisputeLetter.tsx  DownloadCard.tsx  EmailCapture.tsx  ExitIntentPopup.tsx  FightBackKit.tsx  FindingsList.tsx  FixDocument.tsx  HumanAuditCard.tsx  JobCard.tsx  LiveTicker.tsx  OutcomeReport.tsx  PaywallModal.tsx  ProgressBar.tsx  RecommendedProviders.tsx  ReferralCard.tsx  ReputationBadge.tsx  ScoreCard.tsx  ScrewedScoreGame.tsx  ShareButton.tsx  ShareExperience.tsx  TrustedProviders.tsx  UploadZone.tsx  VictoryBanner.tsx  VideoGenerator.tsx  WorkerCard.tsx
docs/: outreach-kit.md  (+1 more)
(+270 files in other folders)
